--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>A new era begins with YOU.</title>
+    <title>Below-Average Cost, Above-Average Friendships</title>
 
     <link rel="stylesheet" href="/assets/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="/assets/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
