One does not simply "position: absolute"

--- a/src/_layouts/aaf.html
+++ b/src/_layouts/aaf.html
@@ -164,20 +164,29 @@
         <div class="header-2">&nbsp;</div>
         <div class="header-3">&nbsp;</div>
         <div class="title">
-            <div style="float: left; width: 50%">
+            <div style="
+                position: absolute;
+                top:      0;
+                left:     0;
+            ">
                 <h1>Above-Average Friendships</h1>
                 <h2>Web Design &amp; Computer Consulting</h2>
             </div>
 
             <div style="
-                float:        right;
-                width:        calc(50% - 20px);
+                position:     absolute;
+                top:          0;
+                right:        0;
                 text-align:   right;
-                margin-top:   10px;
+                margin-top:   30px;
                 margin-right: 10px;
             ">
-                <h4 style="color: #3f4a7f;">Call Us TODAY! (610) 550-8798</h4>
-                <h4>E-Mail us at <a href="mailto:questions@aboveaveragefriendships.com">questions@aboveaveragefriendships.com</a></h4>
+                <h4 style="color: #3f4a7f; margin: 0;">
+                    Call Us TODAY! (610) 550-8798
+                    <br>
+                    <small>Monday-Friday 8AM-4PM</small>
+                </h4>
+                <h4 style="margin: 0">E-Mail us at <a href="mailto:questions@aboveaveragefriendships.com">questions@aboveaveragefriendships.com</a></h4>
             </div>
         </div>
     </header>
