--- a/src/_layouts/aaf.html
+++ b/src/_layouts/aaf.html
@@ -50,22 +50,33 @@
         }
 
         header > .title {
-            position:   absolute;
-            top:        0;
-            left:       340px;
-            right:      0;
-            height:     30px;
-            z-index:    1000;
-            margin-top: 6px;
+            position:        absolute;
+            top:             0;
+            left:            340px;
+            right:           0;
+            height:          30px;
+            z-index:         1000;
+            margin-top:      36px;
+            display:         flex;
+            justify-content: stretch;
+            text-align:      left;
+        }
+
+        header > .title > * {
+            flex: 1;
+        }
+
+        header > .title .title-contact {
+            text-align:   right;
         }
 
         header > .title h1 {
-            margin-bottom: 0px;
+            margin: 0px;
             color:         #3f4a7f;
         }
 
         header > .title h2 {
-            margin-top: 0px;
+            margin: 0px;
         }
 
         #main {
@@ -88,36 +99,29 @@
             color:    #0D2A62;
         }
 
-        #main > #content table {
-            width: 100%;
+        #main > #content .col-or-rows {
+            width:           100%;
+            display:         flex;
+            justify-content: stretch;
         }
 
-        #main > #content th {
+        #main > #content .col-or-rows > section {
+            flex: 1;
+            padding: 0 7.5px;
+        }
+
+        #main > #content h1 {
             color:      white;
             background: #0A2357 center center repeat-x url('/assets/images/01.gif');
             padding:    8px;
             font-size:  24px;
             text-align: left;
-        }
-
-        #main > #content td {
-            padding: 0 !important;
-            margin: 0 !important;
-
-        }
-
-        #main > #content td ul {
-            margin: 0;
-        }
-
-        #main > #content td ul > li {
-            list-style:   url('/assets/images/bullet-0.gif');
-            padding-left: 8px;
-            font-size:    14px;
+            margin:     0;
         }
 
         nav ul {
             padding: 0;
+            margin:  0;
         }
 
         nav ul > li {
@@ -156,37 +160,112 @@
             color:      #AAA;
             font-size:  small;
         }
+
+
+        @media (max-width: 1199px) {
+            header > .header-3,
+            header > .header-2 {
+                display: none;
+            }
+
+            header > .header-1 {
+                margin-top: -35px;
+            }
+
+            header > .title {
+                position:   relative;
+                top:        0;
+                left:       0;
+                width:      100%;
+                padding:    0.5em;
+            }
+
+            header > .title .title-name {
+                margin: 0;
+                text-align: left;
+            }
+
+            #main {
+                margin-top:      15px;
+                display:         flex;
+                justify-content: stretch;
+                clear:           both;
+            }
+        }
+
+
+        @media (max-width: 911px) {
+            header {
+                height: auto;
+            }
+
+            header > .title {
+                height: auto;
+                flex-direction: column;
+            }
+
+            header > .title .title-contact {
+                text-align:   right;
+                margin-top:   0px;
+                margin-right: 10px;
+            }
+
+            header > .title * {
+                text-align: center !important;
+            }
+
+            #main {
+                flex-direction: column;
+            }
+
+            #main > nav {
+                margin-right:    0px;
+                margin-bottom:   15px;
+            }
+
+            #main > nav ul {
+                display:         flex;
+                justify-content: stretch;
+            }
+
+            #main > nav ul > li {
+                flex: 1;
+                border-top:  2px solid #7F94FF;
+                border-left: 2px solid #7F94FF;
+            }
+
+            #main > nav ul > li:last-child {
+                border-right: 2px solid #7F94FF;
+            }
+        }
+
+        @media (max-width: 768px) {
+            #main > #content .col-or-rows {
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <div class="header-1">&nbsp;</div>
-        <div class="header-2">&nbsp;</div>
-        <div class="header-3">&nbsp;</div>
+        <div class="header-image header-1">&nbsp;</div>
+        <div class="header-image header-2">&nbsp;</div>
+        <div class="header-image header-3">&nbsp;</div>
         <div class="title">
-            <div style="
-                position: absolute;
-                top:      0;
-                left:     0;
-            ">
+            <div class="title-name">
                 <h1>Above-Average Friendships</h1>
                 <h2>Web Design &amp; Computer Consulting</h2>
             </div>
 
-            <div style="
-                position:     absolute;
-                top:          0;
-                right:        0;
-                text-align:   right;
-                margin-top:   30px;
-                margin-right: 10px;
-            ">
+            <div class="title-contact">
                 <h4 style="color: #3f4a7f; margin: 0;">
                     Call Us TODAY! (610) 550-8798
                     <br>
                     <small>Monday-Friday 8AM-4PM</small>
                 </h4>
-                <h4 style="margin: 0">E-Mail us at <a href="mailto:questions@aboveaveragefriendships.com">questions@aboveaveragefriendships.com</a></h4>
+                <h4 style="margin: 0">
+                    E-Mail us at <a href="mailto:questions@aboveaveragefriendships.com">questions@aboveaveragefriendships.com</a>
+                </h4>
             </div>
         </div>
     </header>
