--- a/src/_layouts/aaf.html
+++ b/src/_layouts/aaf.html
@@ -240,6 +240,10 @@
         }
 
         @media (max-width: 768px) {
+            html, body {
+                overflow: hidden;
+            }
+
             #main > #content .col-or-rows {
                 flex-direction: column;
             }
