--- a/src/_layouts/aaf.html
+++ b/src/_layouts/aaf.html
@@ -241,7 +241,7 @@
 
         @media (max-width: 768px) {
             html, body {
-
+                overflow-x: hidden;
             }
 
             #main > #content .col-or-rows {
