--- a/src/_layouts/aaf.html
+++ b/src/_layouts/aaf.html
@@ -244,8 +244,32 @@
                 overflow-x: hidden;
             }
 
+            #main > #content p {
+                padding: 15px;
+            }
+
             #main > #content .col-or-rows {
                 flex-direction: column;
+            }
+
+            #main > #content .col-or-rows section {
+                padding: 0;
+            }
+
+            #main > #content .col-or-rows section {
+                text-align: center;
+            }
+
+            #main > #content .col-or-rows section img {
+                margin: 0.5em;
+            }
+
+            #main > #content .col-or-rows section p {
+                text-align: left;
+            }
+
+            #main > #content .col-or-rows section li {
+                list-style: none;
             }
         }
     </style>
